<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/cabecera_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/primary_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/resultados"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="34sp"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>



    <!-- CardView para contener los resultados -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <!-- Contenedor LinearLayout para los resultados -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Campo Salario Bruto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <!-- Nombre del campo -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:text="@string/salarioBrutoMensual"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

                <!-- Resultado de la calculadora -->
                <TextView
                    android:id="@+id/resultadoSalarioBruto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="- resultado -"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/primary_light"
                    />

            </LinearLayout>

            <!-- Salario Neto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:text="@string/salarioNeto"
                    android:textSize="20sp" />

                <!-- Resultado de la calculadora -->
                <TextView
                    android:id="@+id/resultadoNeto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="- resultado -"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/primary_light"
                    />

            </LinearLayout>

            <!-- Retención Irpf -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:text="@string/retencionIrpf"
                    android:textSize="20sp" />
                <!-- Resultado de la calculadora -->
                <TextView
                    android:id="@+id/resultadoIrpf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="- resultado -"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/primary_light"
                    />

            </LinearLayout>

            <!-- Deducciones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:text="@string/deducciones"
                    android:textSize="20sp" />
                <!-- Resultado de la calculadora -->
                <TextView
                    android:id="@+id/resultadoDeducciones"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="- resultado -"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/primary_light"
                    />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!--             BOTÓN                -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/atras"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_light"
        android:padding="12dp"
        android:text="@string/atras"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:drawableStart="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>